More sections + heroku setup

--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -14,3 +14,7 @@ body {
  	font-size: 16px;
  	-webkit-font-smoothing: antialiased;
 }
+
+@import 'sections/about';
+@import 'sections/when';
+@import 'sections/where';
