--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -54,7 +54,7 @@ header {
 		font-size: 30px;
 
 		div {
-			float: right;
+			float: left;
 			width: 25%;
 			text-align: center;
 			font-weight: 300;
