--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,76 +1,7 @@
-/* line 1, ../scss/_header.scss */
-header {
-  color: white;
-  background-image: url("../img/header.png");
-  background-size: cover;
-  padding: 37px;
-  height: 580px;
-}
-/* line 8, ../scss/_header.scss */
-header > div {
-  width: 850px;
-  margin: auto;
-}
-/* line 13, ../scss/_header.scss */
-header span {
-  float: left;
-}
-/* line 17, ../scss/_header.scss */
-header nav {
-  float: right;
-}
-/* line 20, ../scss/_header.scss */
-header nav a {
-  color: white;
-  opacity: 0.5;
-  text-transform: uppercase;
-  padding-right: 20px;
-}
-/* line 27, ../scss/_header.scss */
-header nav a:last-of-type {
-  padding-right: 0px;
-}
-/* line 31, ../scss/_header.scss */
-header nav a:hover, header nav a.selected {
-  opacity: 1;
-}
-/* line 36, ../scss/_header.scss */
-header nav a.button {
-  opacity: 1;
-}
-/* line 42, ../scss/_header.scss */
-header h1 {
-  padding-top: 178px;
-  padding-bottom: 111px;
-}
-/* line 47, ../scss/_header.scss */
-header h3 {
-  text-align: center;
-}
-/* line 52, ../scss/_header.scss */
-header .counter {
-  padding-top: 40px;
-  font-size: 30px;
-}
-/* line 56, ../scss/_header.scss */
-header .counter div {
-  float: left;
-  width: 25%;
-  text-align: center;
-  font-weight: 300;
-  font-size: 30px;
-  text-transform: uppercase;
-}
-/* line 64, ../scss/_header.scss */
-header .counter div strong {
-  width: 100%;
-  display: inline-block;
-}
-
 /* line 1, ../scss/_elements.scss */
 .clear {
   clear: both;
-  display: block;
+  display: block !important;
 }
 
 /* line 6, ../scss/_elements.scss */
@@ -88,62 +19,76 @@ section div.half:nth-of-type(even) {
   float: right;
 }
 
-/* line 21, ../scss/_elements.scss */
+/* line 20, ../scss/_elements.scss */
+.background {
+  width: 100%;
+}
+/* line 24, ../scss/_elements.scss */
+.background.gray {
+  background-color: #f7f6f6;
+}
+/* line 28, ../scss/_elements.scss */
+.background.white {
+  background-color: white;
+}
+
+/* line 34, ../scss/_elements.scss */
 .to.right {
   float: right;
 }
-/* line 25, ../scss/_elements.scss */
+/* line 38, ../scss/_elements.scss */
 .to.left {
   float: left;
 }
 
-/* line 30, ../scss/_elements.scss */
+/* line 43, ../scss/_elements.scss */
 h1, h2, h3, h4 {
   text-align: center;
   text-transform: uppercase;
   font-weight: 300;
 }
-/* line 36, ../scss/_elements.scss */
+/* line 49, ../scss/_elements.scss */
 h1.black, h2.black, h3.black, h4.black {
   color: black;
 }
-/* line 40, ../scss/_elements.scss */
+/* line 53, ../scss/_elements.scss */
 h1.orange, h2.orange, h3.orange, h4.orange {
   color: #f47a27;
 }
-/* line 44, ../scss/_elements.scss */
+/* line 57, ../scss/_elements.scss */
 h1.white, h2.white, h3.white, h4.white {
   color: white;
 }
 
-/* line 49, ../scss/_elements.scss */
+/* line 62, ../scss/_elements.scss */
 h1 {
   font-size: 40px;
 }
 
-/* line 53, ../scss/_elements.scss */
+/* line 66, ../scss/_elements.scss */
 h2 {
   font-size: 50px;
   color: #f47a27;
 }
 
-/* line 59, ../scss/_elements.scss */
+/* line 72, ../scss/_elements.scss */
 h3 {
   font-size: 30px;
 }
 
-/* line 63, ../scss/_elements.scss */
+/* line 76, ../scss/_elements.scss */
 a {
   text-decoration: none;
+  transition-duration: 0.3s;
 }
 
-/* line 67, ../scss/_elements.scss */
+/* line 81, ../scss/_elements.scss */
 p {
   color: #a0a0a0;
   margin-bottom: 1em;
 }
 
-/* line 72, ../scss/_elements.scss */
+/* line 86, ../scss/_elements.scss */
 a.button {
   border-radius: 3px;
   border: 3px solid;
@@ -153,42 +98,43 @@ a.button {
   width: 200px;
   text-align: center;
 }
-/* line 82, ../scss/_elements.scss */
+/* line 96, ../scss/_elements.scss */
 a.button.small {
-  width: auto;
+  width: 80px;
+  display: inline-block;
   border-width: 2px;
   border-radius: 2px;
   padding: 5px 7px !important;
 }
-/* line 89, ../scss/_elements.scss */
+/* line 104, ../scss/_elements.scss */
 a.button.white {
   border-color: white;
   color: white;
 }
-/* line 93, ../scss/_elements.scss */
+/* line 108, ../scss/_elements.scss */
 a.button.white:hover {
   background-color: white;
   color: #f47a27;
 }
-/* line 99, ../scss/_elements.scss */
+/* line 114, ../scss/_elements.scss */
 a.button.orange {
   border-color: #f47a27;
   color: #f47a27;
 }
-/* line 103, ../scss/_elements.scss */
+/* line 118, ../scss/_elements.scss */
 a.button.orange:hover {
   background-color: #f47a27;
   color: white;
 }
 
-/* line 5, ../scss/app.scss */
+/* line 4, ../scss/app.scss */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* line 11, ../scss/app.scss */
+/* line 10, ../scss/app.scss */
 body {
   font-color: #a0a0a0;
   font-family: "Roboto", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
@@ -196,9 +142,79 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+/* line 1, ../scss/_header.scss */
+header {
+  color: white;
+  background-image: url("../img/header.png");
+  background-size: cover;
+  padding: 37px;
+  height: 580px;
+}
+/* line 8, ../scss/_header.scss */
+header > div {
+  width: 850px;
+  margin: auto;
+}
+/* line 13, ../scss/_header.scss */
+header span {
+  float: left;
+  padding: 5px 7px;
+}
+/* line 18, ../scss/_header.scss */
+header nav {
+  float: right;
+}
+/* line 21, ../scss/_header.scss */
+header nav a {
+  color: white;
+  opacity: 0.5;
+  text-transform: uppercase;
+  padding-right: 20px;
+}
+/* line 28, ../scss/_header.scss */
+header nav a:last-of-type {
+  padding-right: 0px;
+}
+/* line 32, ../scss/_header.scss */
+header nav a:hover, header nav a.selected {
+  opacity: 1;
+}
+/* line 37, ../scss/_header.scss */
+header nav a.button {
+  opacity: 1;
+}
+/* line 43, ../scss/_header.scss */
+header h1 {
+  padding-top: 178px;
+  padding-bottom: 111px;
+}
+/* line 48, ../scss/_header.scss */
+header h3 {
+  text-align: center;
+}
+/* line 53, ../scss/_header.scss */
+header .counter {
+  padding-top: 40px;
+  font-size: 30px;
+}
+/* line 57, ../scss/_header.scss */
+header .counter div {
+  float: left;
+  width: 25%;
+  text-align: center;
+  font-weight: 300;
+  font-size: 30px;
+  text-transform: uppercase;
+}
+/* line 65, ../scss/_header.scss */
+header .counter div strong {
+  width: 100%;
+  display: inline-block;
+}
+
 /* line 1, ../scss/sections/_about.scss */
 #about {
-  padding-top: 75px;
+  padding: 75px 0px;
 }
 /* line 5, ../scss/sections/_about.scss */
 #about h2 {
@@ -268,4 +284,137 @@ body {
 /* line 1, ../scss/sections/_where.scss */
 #where {
   width: 100%;
+  margin: 0;
+  padding: 0;
+  height: 350px;
+}
+
+/* line 1, ../scss/sections/_who.scss */
+#who {
+  padding-top: 40px;
+}
+/* line 5, ../scss/sections/_who.scss */
+#who h2 {
+  margin-bottom: 40px;
+}
+/* line 9, ../scss/sections/_who.scss */
+#who .speaker {
+  width: 30%;
+  float: left;
+  margin-right: 5%;
+  position: relative;
+  margin-bottom: 5em;
+}
+/* line 16, ../scss/sections/_who.scss */
+#who .speaker:last-of-type {
+  margin-right: 0%;
+}
+/* line 21, ../scss/sections/_who.scss */
+#who .speaker img {
+  border-radius: 240px;
+  width: 240px;
+  height: 240px;
+  display: block;
+  margin: auto;
+}
+/* line 30, ../scss/sections/_who.scss */
+#who .speaker span.name {
+  margin-top: 20px;
+  display: inline-block;
+  width: 100%;
+  font-size: 25px;
+  text-align: center;
+  color: #333333;
+}
+/* line 39, ../scss/sections/_who.scss */
+#who .speaker span.description {
+  font-size: 18px;
+  color: #9f9393;
+  font-style: italic;
+  text-align: center;
+  font-weight: 300;
+  display: inline-block;
+  text-align: center;
+}
+/* line 50, ../scss/sections/_who.scss */
+#who .speaker .links {
+  display: block;
+  margin: 1em 0;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+/* line 58, ../scss/sections/_who.scss */
+#who .speaker .links a {
+  width: 35px;
+  height: 35px;
+  display: inline-block;
+  font-family: "FontAwesome";
+  color: black;
+  background-color: white;
+  border-radius: 35px;
+  float: left;
+  margin-right: 11px;
+}
+/* line 69, ../scss/sections/_who.scss */
+#who .speaker .links a:last-of-type {
+  margin-right: 0em;
+}
+/* line 73, ../scss/sections/_who.scss */
+#who .speaker .links a:before {
+  width: 35px;
+  text-align: center;
+  display: inline-block;
+  height: 35px;
+  line-height: 35px;
+}
+/* line 81, ../scss/sections/_who.scss */
+#who .speaker .links a:hover {
+  background-color: #f47a27;
+  color: white;
+}
+
+/* line 90, ../scss/sections/_who.scss */
+.Talor_Swift {
+  font-family: "Roboto";
+  line-height: 1.2;
+  position: absolute;
+  left: 1254.406px;
+  top: 2223px;
+  z-index: 84;
+}
+
+/* line 99, ../scss/sections/_who.scss */
+.And_another_nice_placeholer_ {
+  font-size: 18px;
+  font-family: "Roboto";
+  color: #9f9393;
+  font-style: italic;
+  line-height: 1.667;
+  text-align: center;
+  position: absolute;
+  left: 1200.006px;
+  top: 2292.599px;
+  z-index: 85;
+}
+
+/* line 1, ../scss/sections/_footer.scss */
+footer {
+  position: fixed;
+  z-index: -1;
+  bottom: 0;
+  background-color: #f47a27;
+  width: 100%;
+  height: 530px;
+}
+
+/* line 10, ../scss/sections/_footer.scss */
+#fakebackground {
+  background-color: white;
+}
+
+/* line 14, ../scss/sections/_footer.scss */
+#fakefooter {
+  height: 530px;
+  background-color: transparent;
 }
