--- a/public/scss/_elements.scss
+++ b/public/scss/_elements.scss
@@ -1,6 +1,6 @@
 .clear {
 	clear: both;
-	display: block;
+	display: block !important;
 }
 
 section {
@@ -14,6 +14,19 @@ section {
 		&:nth-of-type(even) {
 			float: right;
 		}
+	}
+}
+
+.background {
+
+	width: 100%;
+
+	&.gray {
+		background-color: $gray;
+	}
+
+	&.white {
+		background-color: white;
 	}
 }
 
@@ -62,6 +75,7 @@ h3 {
 
 a {
 	text-decoration: none;
+	transition-duration: 0.3s;
 }
 
 p {
@@ -80,7 +94,8 @@ a.button {
 	text-align: center;
 
 	&.small {
-		width: auto;
+		width: 80px;
+		display: inline-block;
 		border-width: 2px;
 		border-radius: 2px;
 		padding: 5px 7px !important;
