--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -1,5 +1,4 @@
 @import 'colors';
-@import 'header';
 @import 'elements';
 
 * {
@@ -15,6 +14,9 @@ body {
  	-webkit-font-smoothing: antialiased;
 }
 
+@import 'header';
 @import 'sections/about';
 @import 'sections/when';
 @import 'sections/where';
+@import 'sections/who';
+@import 'sections/footer';
