--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -19,4 +19,6 @@ body {
 @import 'sections/when';
 @import 'sections/where';
 @import 'sections/who';
+@import 'sections/what';
+@import 'sections/creators';
 @import 'sections/footer';
