--- a/public/scss/sections/_footer.scss
+++ b/public/scss/sections/_footer.scss
@@ -1,10 +1,68 @@
 footer {
+	padding: 80px 0px;
+
+	a {
+		color: white;
+		font-weight: bold;
+	}
+
 	position: fixed;
 	z-index: -1;
 	bottom: 0;
 	background-color: $orange;
 	width: 100%;
 	height: 530px;
+
+	h2, h3, h4 {
+		color: white;
+	}
+
+	h2 {
+		margin-bottom: 35px;
+	}
+
+	h4 {
+		margin-bottom: 80px;
+	}
+
+	span {
+		color: white;
+		text-align: center;
+		display: inline-block;
+		width: 100%;
+	}
+
+	.links {
+			display: block;
+			width: 200px;
+			margin: 1em auto;
+			margin-bottom: 90px;
+
+			a {
+				float: left;
+				margin-right: 20px;
+				font-size: 37px;
+				font-family: "FontAwesome";
+				color: white;
+
+				&:last-of-type {
+					margin-right: 0em;
+				}
+
+				&:before {
+					width: 35px;
+					text-align: center;
+					display: inline-block;
+					height: 35px;
+					line-height: 35px;
+				}
+
+				&:hover {
+					background-color: $orange;
+					color: white;
+				}
+			}
+		}
 }
 
 #fakebackground {
