--- a/public/scss/sections/_who.scss
+++ b/public/scss/sections/_who.scss
@@ -21,7 +21,6 @@
 		img {
 			border-radius: 240px;
 			width: 240px;
-			height: 240px;
 			display: block;
 			margin: auto;
 		}
@@ -40,10 +39,10 @@
 				font-size: 18px;
 				color: rgb(159, 147, 147);
 				font-style: italic;
-				text-align: center;
 				font-weight: 300;
 				display: inline-block;
 				text-align: center;
+				width: 100%;
 			}
 		}
 
