--- a/public/scss/_elements.scss
+++ b/public/scss/_elements.scss
@@ -1,5 +1,9 @@
 .clear {
 	clear: both;
+	margin: 0 !important;
+	padding: 0 !important;
+	height: 0px !important;
+	width: 0px !important;
 	display: block !important;
 }
 
