--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -5,6 +5,10 @@ header {
 	padding: 37px;
 	height: 580px;
 
+	a.hamburger {
+		display: none;
+	}
+
 	> div {
 		width: $colwidth;
 		margin: auto;
@@ -13,6 +17,10 @@ header {
 	span {
 		float: left;
 		padding: 5px 7px;
+	}
+
+	nav.mobile {
+		display: none;
 	}
 
 	nav {
@@ -65,6 +73,63 @@ header {
 			strong {
 				width: 100%;
 				display: inline-block;
+			}
+		}
+	}
+}
+
+
+.sticky {
+	display: block;
+	width: 100%;
+	background-color: #f47a27;
+	height: 40px;
+	position: fixed;
+	top: -100%;
+	-webkit-transition: 1s all;
+
+	>div {
+		width: $colwidth;
+		margin: auto;
+	}
+
+	span {
+		padding: 5px 7px;
+		line-height: 40px;
+		color: white;
+	}
+
+	a.hamburger {
+		display: none;
+	}
+
+	&.active {
+		top: 0px;
+		z-index: 20;
+	}
+
+		nav {
+		float: right;
+		line-height: 40px;
+		
+		a {
+			color: white;
+			opacity: 0.5;
+			text-transform: uppercase;
+
+			padding-right: 20px;
+
+			&:last-of-type {
+				padding-right: 0px;
+			}
+
+			&:hover,
+			&.selected {
+				opacity: 1;
+			}
+
+			&.button {
+				opacity: 1;
 			}
 		}
 	}
