--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,6 +12,7 @@
 section {
   width: 850px;
   margin: auto;
+  z-index: 1000;
 }
 /* line 14, ../scss/_elements.scss */
 section div.half {
@@ -26,73 +27,75 @@ section div.half:nth-of-type(even) {
 /* line 24, ../scss/_elements.scss */
 .background {
   width: 100%;
+  position: relative;
+  z-index: 300;
 }
-/* line 28, ../scss/_elements.scss */
+/* line 30, ../scss/_elements.scss */
 .background.gray {
   background-color: #f7f6f6;
 }
-/* line 32, ../scss/_elements.scss */
+/* line 34, ../scss/_elements.scss */
 .background.white {
   background-color: white;
 }
 
-/* line 38, ../scss/_elements.scss */
+/* line 40, ../scss/_elements.scss */
 .to.right {
   float: right;
 }
-/* line 42, ../scss/_elements.scss */
+/* line 44, ../scss/_elements.scss */
 .to.left {
   float: left;
 }
 
-/* line 47, ../scss/_elements.scss */
+/* line 49, ../scss/_elements.scss */
 h1, h2, h3, h4 {
   text-align: center;
   text-transform: uppercase;
   font-weight: 300;
 }
-/* line 53, ../scss/_elements.scss */
+/* line 55, ../scss/_elements.scss */
 h1.black, h2.black, h3.black, h4.black {
   color: black;
 }
-/* line 57, ../scss/_elements.scss */
+/* line 59, ../scss/_elements.scss */
 h1.orange, h2.orange, h3.orange, h4.orange {
   color: #f47a27;
 }
-/* line 61, ../scss/_elements.scss */
+/* line 63, ../scss/_elements.scss */
 h1.white, h2.white, h3.white, h4.white {
   color: white;
 }
 
-/* line 66, ../scss/_elements.scss */
+/* line 68, ../scss/_elements.scss */
 h1 {
   font-size: 40px;
 }
 
-/* line 70, ../scss/_elements.scss */
+/* line 72, ../scss/_elements.scss */
 h2 {
   font-size: 50px;
   color: #f47a27;
 }
 
-/* line 76, ../scss/_elements.scss */
+/* line 78, ../scss/_elements.scss */
 h3 {
   font-size: 30px;
 }
 
-/* line 80, ../scss/_elements.scss */
+/* line 82, ../scss/_elements.scss */
 a {
   text-decoration: none;
   transition-duration: 0.3s;
 }
 
-/* line 85, ../scss/_elements.scss */
+/* line 87, ../scss/_elements.scss */
 p {
   color: #a0a0a0;
   margin-bottom: 1em;
 }
 
-/* line 90, ../scss/_elements.scss */
+/* line 92, ../scss/_elements.scss */
 a.button {
   border-radius: 3px;
   border: 3px solid;
@@ -102,7 +105,7 @@ a.button {
   width: 200px;
   text-align: center;
 }
-/* line 100, ../scss/_elements.scss */
+/* line 102, ../scss/_elements.scss */
 a.button.small {
   width: 80px;
   display: inline-block;
@@ -110,22 +113,22 @@ a.button.small {
   border-radius: 2px;
   padding: 5px 7px !important;
 }
-/* line 108, ../scss/_elements.scss */
+/* line 110, ../scss/_elements.scss */
 a.button.white {
   border-color: white;
   color: white;
 }
-/* line 112, ../scss/_elements.scss */
+/* line 114, ../scss/_elements.scss */
 a.button.white:hover {
   background-color: white;
   color: #f47a27;
 }
-/* line 118, ../scss/_elements.scss */
+/* line 120, ../scss/_elements.scss */
 a.button.orange {
   border-color: #f47a27;
   color: #f47a27;
 }
-/* line 122, ../scss/_elements.scss */
+/* line 124, ../scss/_elements.scss */
 a.button.orange:hover {
   background-color: #f47a27;
   color: white;
@@ -148,7 +151,7 @@ body {
 
 /* line 18, ../scss/app.scss */
 #fakebackground {
-  background-color: red;
+  background-color: white;
 }
 
 /* line 1, ../scss/_header.scss */
@@ -236,8 +239,8 @@ header .counter div strong {
   background-color: #f47a27;
   height: 40px;
   position: fixed;
-  top: -100%;
-  -webkit-transition: 1s all;
+  top: -40px;
+  transition: 1s all;
 }
 /* line 91, ../scss/_header.scss */
 .sticky > div {
@@ -257,29 +260,31 @@ header .counter div strong {
 /* line 106, ../scss/_header.scss */
 .sticky.active {
   top: 0px;
-  z-index: 20;
+  z-index: 2000;
+  border-bottom: 1px solid #f36b0f;
+  transition: 1s all;
 }
-/* line 111, ../scss/_header.scss */
+/* line 113, ../scss/_header.scss */
 .sticky nav {
   float: right;
   line-height: 40px;
 }
-/* line 115, ../scss/_header.scss */
+/* line 117, ../scss/_header.scss */
 .sticky nav a {
   color: white;
   opacity: 0.5;
   text-transform: uppercase;
   padding-right: 20px;
 }
-/* line 122, ../scss/_header.scss */
+/* line 124, ../scss/_header.scss */
 .sticky nav a:last-of-type {
   padding-right: 0px;
 }
-/* line 126, ../scss/_header.scss */
+/* line 128, ../scss/_header.scss */
 .sticky nav a:hover, .sticky nav a.selected {
   opacity: 1;
 }
-/* line 131, ../scss/_header.scss */
+/* line 133, ../scss/_header.scss */
 .sticky nav a.button {
   opacity: 1;
 }
@@ -359,6 +364,7 @@ header .counter div strong {
   margin: 0;
   padding: 0;
   height: 350px;
+  pointer-events: none;
 }
 
 /* line 1, ../scss/sections/_who.scss */
@@ -447,13 +453,54 @@ header .counter div strong {
 
 /* line 1, ../scss/sections/_what.scss */
 #what {
-  height: 500px;
-  padding-top: 40px;
+  padding: 40px 0px;
+}
+/* line 4, ../scss/sections/_what.scss */
+#what h2 {
+  padding-bottom: 40px;
+}
+/* line 8, ../scss/sections/_what.scss */
+#what div.agenda {
+  width: 50%;
+  float: right;
+  padding-left: 5em;
+  border-left: 3px solid #f47a27;
+}
+/* line 15, ../scss/sections/_what.scss */
+#what div.agenda div.item {
+  position: relative;
+}
+/* line 19, ../scss/sections/_what.scss */
+#what div.agenda div.item img {
+  width: 62px;
+  height: 62px;
+  position: absolute;
+  border-radius: 60px;
+  border: 3px solid #f47a27;
+  left: -5em;
+  transform: translateX(-51%);
+}
+/* line 29, ../scss/sections/_what.scss */
+#what div.agenda div.item span {
+  width: 100%;
+  display: inline-block;
+}
+/* line 34, ../scss/sections/_what.scss */
+#what div.agenda div.item span.time {
+  color: #d2d2d2;
+}
+/* line 38, ../scss/sections/_what.scss */
+#what div.agenda div.item span.name {
+  color: #f47a27;
+}
+/* line 44, ../scss/sections/_what.scss */
+#what div.agenda div.item:last-of-type p {
+  margin-bottom: 0px;
 }
 
 /* line 1, ../scss/sections/_creators.scss */
 #creators {
-  padding-top: 40px;
+  padding: 40px 0px;
 }
 /* line 5, ../scss/sections/_creators.scss */
 #creators h2 {
@@ -500,8 +547,9 @@ header .counter div strong {
   display: block;
   width: 127px;
   margin: 1em auto;
+  margin-bottom: 0px;
 }
-/* line 53, ../scss/sections/_creators.scss */
+/* line 54, ../scss/sections/_creators.scss */
 #creators .creator .links a {
   width: 35px;
   height: 35px;
@@ -513,11 +561,11 @@ header .counter div strong {
   float: left;
   margin-right: 11px;
 }
-/* line 64, ../scss/sections/_creators.scss */
+/* line 65, ../scss/sections/_creators.scss */
 #creators .creator .links a:last-of-type {
   margin-right: 0em;
 }
-/* line 68, ../scss/sections/_creators.scss */
+/* line 69, ../scss/sections/_creators.scss */
 #creators .creator .links a:before {
   width: 35px;
   text-align: center;
@@ -525,7 +573,7 @@ header .counter div strong {
   height: 35px;
   line-height: 35px;
 }
-/* line 76, ../scss/sections/_creators.scss */
+/* line 77, ../scss/sections/_creators.scss */
 #creators .creator .links a:hover {
   background-color: #f47a27;
   color: white;
@@ -534,8 +582,8 @@ header .counter div strong {
 /* line 1, ../scss/sections/_footer.scss */
 footer {
   padding: 80px 0px;
-  position: fixed;
   z-index: -1;
+  position: fixed;
   bottom: 0;
   background-color: #f47a27;
   width: 100%;
@@ -546,33 +594,33 @@ footer a {
   color: white;
   font-weight: bold;
 }
-/* line 16, ../scss/sections/_footer.scss */
+/* line 15, ../scss/sections/_footer.scss */
 footer h2, footer h3, footer h4 {
   color: white;
 }
-/* line 20, ../scss/sections/_footer.scss */
+/* line 19, ../scss/sections/_footer.scss */
 footer h2 {
   margin-bottom: 35px;
 }
-/* line 24, ../scss/sections/_footer.scss */
+/* line 23, ../scss/sections/_footer.scss */
 footer h4 {
   margin-bottom: 80px;
 }
-/* line 28, ../scss/sections/_footer.scss */
+/* line 27, ../scss/sections/_footer.scss */
 footer span {
   color: white;
   text-align: center;
   display: inline-block;
   width: 100%;
 }
-/* line 35, ../scss/sections/_footer.scss */
+/* line 34, ../scss/sections/_footer.scss */
 footer .links {
   display: block;
   width: 200px;
   margin: 1em auto;
   margin-bottom: 90px;
 }
-/* line 41, ../scss/sections/_footer.scss */
+/* line 40, ../scss/sections/_footer.scss */
 footer .links a {
   float: left;
   margin-right: 20px;
@@ -580,11 +628,11 @@ footer .links a {
   font-family: "FontAwesome";
   color: white;
 }
-/* line 48, ../scss/sections/_footer.scss */
+/* line 47, ../scss/sections/_footer.scss */
 footer .links a:last-of-type {
   margin-right: 0em;
 }
-/* line 52, ../scss/sections/_footer.scss */
+/* line 51, ../scss/sections/_footer.scss */
 footer .links a:before {
   width: 35px;
   text-align: center;
@@ -592,16 +640,17 @@ footer .links a:before {
   height: 35px;
   line-height: 35px;
 }
-/* line 60, ../scss/sections/_footer.scss */
+/* line 59, ../scss/sections/_footer.scss */
 footer .links a:hover {
   background-color: #f47a27;
   color: white;
 }
 
-/* line 68, ../scss/sections/_footer.scss */
-#fakefooter {
-  height: 530px;
+/* line 67, ../scss/sections/_footer.scss */
+.fakefooter {
+  margin-bottom: 530px;
   background-color: transparent;
+  pointer-events: none;
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 720px) {
@@ -742,12 +791,40 @@ footer .links a:hover {
   }
 
   /* line 144, ../scss/_responsive.scss */
+  #what div.agenda {
+    width: 90%;
+  }
+
+  /* line 150, ../scss/_responsive.scss */
   #creators .creator {
     width: 100%;
   }
-  /* line 147, ../scss/_responsive.scss */
+  /* line 153, ../scss/_responsive.scss */
   #creators .creator img {
     max-width: 240px;
     width: 90%;
+  }
+}
+@media only screen and (min-device-width: 0px) and (max-device-width: 319px) {
+  /* line 1, ../scss/_watch.scss */
+  body {
+    background: #f47a27;
+  }
+  /* line 3, ../scss/_watch.scss */
+  body > * {
+    display: none;
+  }
+  /* line 7, ../scss/_watch.scss */
+  body:before {
+    display: block;
+    color: white;
+    text-align: center;
+    position: relative;
+    content: "Your watch is not supported, sorry kiddo.";
+    box-sizing: border-box;
+    top: 50%;
+    position: absolute;
+    width: 100%;
+    transform: translateY(-50%);
   }
 }
