--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -34,3 +34,9 @@ and (min-device-width : 320px)
 and (max-device-width : 720px) { 
 	@import 'responsive';
 }
+
+@media only screen 
+and (min-device-width : 0px) 
+and (max-device-width : 319px) { 
+	@import 'watch';
+}
