--- a/public/scss/sections/_creators.scss
+++ b/public/scss/sections/_creators.scss
@@ -1,6 +1,6 @@
 #creators {
 
-	padding-top: 40px;
+	padding: 40px 0px;
 
 	h2 {
 		margin-bottom: 40px;
@@ -49,6 +49,7 @@
 			display: block;
 			width: 127px;
 			margin: 1em auto;
+			margin-bottom: 0px;
 
 			a {
 				width: 35px;
