--- a/public/scss/sections/_what.scss
+++ b/public/scss/sections/_what.scss
@@ -23,7 +23,7 @@
 				border-radius: 60px;
 				border: 3px solid #f47a27;
 				left: -5em;
-				transform: translateX(-51%);
+				-webkit-transform: translateX(-51%);
 			}
 
 			span {
