--- a/public/scss/_watch.scss
+++ b/public/scss/_watch.scss
@@ -14,6 +14,6 @@ body {
 		top: 50%;
 		position: absolute;
 		width: 100%;
-		transform: translateY(-50%);
+		-webkit-transform: translateY(-50%);
 	}
 }
